--- a/example.ipynb
+++ b/example.ipynb
@@ -28,8 +28,8 @@
     "#The first way to add a layer is by function addlayer(d,res_xy,res_z,position).\n",
     "#d is the thickness of the layer in radiation length X0.\n",
     "#res_xy is the resolution in the transverse plane and res_z is the resolution in the z direction.\n",
-    "#The position of 0 is the interaction point.\n",
-    "#Note: the units here are X0 for d, micrometer for res_xy and res_z, meter for position\n",
+    "#The origin is set at the center.\n",
+    "#Note: the units here are X0 for d, micrometer for res_xy and res_z and meter for position\n",
     "mydetector=Detector()\n",
     "mydetector.addlayer(0.0067,5.0e-5/sqrt(12),5.0e-5/sqrt(12),0.039)\n",
     "mydetector.addlayer(0.0067,5.0e-5/sqrt(12),5.0e-5/sqrt(12),0.099)\n",
